chore(style): Change scrollbar color and add scroll behaviour to smooth

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,8 @@
     background: transparent;
   }
   ::-webkit-scrollbar-thumb {
-    background: #3d306c;
+    background: #000;
   }
+
+  scroll-behavior: smooth;
 }
