--- a/app/globals.css
+++ b/app/globals.css
@@ -4,27 +4,22 @@
 
 /* ========================================== TAILWIND STYLES */
 @layer base {
-  /* Remove scrollbar */
-  .remove-scrollbar::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
-    border-radius: 0px;
-  }
-
-  .remove-scrollbar::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  .remove-scrollbar::-webkit-scrollbar-thumb {
-    background: transparent;
-    border-radius: 0px;
-  }
-
-  .remove-scrollbar::-webkit-scrollbar-thumb:hover {
-    /* background: #1e2238; */
-    background: transparent;
-  }
   .font-outline-2 {
     -webkit-text-stroke: 2px #fff;
   }
+}
+* {
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    border-radius: 0px;
+  }
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #155e75;
+  }
+
+  scroll-behavior: smooth;
 }
